feat: defer user signup with sub and email
